tests/invalid/syntax/unbalanced_parens.fig
// INVALID: Unbalanced parenthesis in expression
// Expected parse error: mismatched parentheses
func bad(x: i32) -> i32
    return (x + 1
